Update remote content FOLIO-3311

--- a/_remote/stripes/doc/i18n.md
+++ b/_remote/stripes/doc/i18n.md
@@ -24,7 +24,7 @@ We store locale data in each app's `translations/<module-name>` directory, e.g. 
 
 We use the components `<FormattedDate>` and `<FormattedTime>` and the methods `intl.formatDate` and `intl.formatTime` to render dates and times. FOLIO front-end modules should stick to exchanging date and time information with the back end in UTC.
 
-Our approach to providing rich-text markup, e.g. `The value <strong>value</strong> was removed.`, is to use HTML directly in the translation files and to use the `<SafeHTMLMessage>` component to display it. (HTML markup in values passed through `<FormattedMessage>` will be escaped, e.g. `<strong>` will be converted to `&amp;%lt;strong&gt;&amp;` whereas `<SafeHTMLMessage>` allows HTML markup to stand but sanitizes it to remove dangerous code without escaping known-good values.)
+Our approach to providing rich-text markup, e.g. `The value <strong>{value}</strong> was removed.`, is to use HTML directly in the translation files and to use the `<SafeHTMLMessage>` component to display it. (HTML markup in values passed through `<FormattedMessage>` will be escaped, e.g. `<strong>` will be converted to `&amp;%lt;strong&gt;&amp;` whereas `<SafeHTMLMessage>` allows HTML markup to stand but sanitizes it to remove dangerous code without escaping known-good values.)
 
 The FOLIO Project uses [lokalise.co](https://lokalise.co/) to manage the process of providing language-specific strings is FOLIO modules.
 Developers add keys and English translation strings to the `translations/<module-name>/en.json` file.
@@ -45,23 +45,23 @@ FOLIO front-end modules should stick to exchanging date and time information wit
 
 To format a string as a `React.Node` element, use
 ```
-import  FormattedMessage  from 'react-intl';
+import { FormattedMessage } from 'react-intl';
 ...
 const message = <FormattedMessage id="the.message.id" values= value: "Flying Squirrel"  />;
 ```
 If you need an actual string rather than a React.Node, as for an `aria-label` attribute, use the [useIntl hook](https://formatjs.io/docs/react-intl/api/#useintl-hook), the [injectIntl HOC](https://formatjs.io/docs/react-intl/api#injection-api) or `stripes-core`'s `<IntlConsumer>`:
 ```
-import  IntlConsumer  from 'stripes-core';
+import { IntlConsumer } from 'stripes-core';
 ...
 <IntlConsumer>
-  intl => (
-    <SomeComponent ariaLabel=intl.formatMessage( id: 'the.message.id' ) />
-  )
+  {intl => (
+    <SomeComponent ariaLabel={intl.formatMessage({ id: 'the.message.id' })} />
+  )}
 </IntlConsumer>
 ```
 In a functional component, you may retrieve the `intl` object via the [`useIntl` Hook](https://formatjs.io/docs/react-intl/api#injection-api).
 
-For HTML template strings, e.g. `The value <strong>value</strong> was removed.`, use
+For HTML template strings, e.g. `The value <strong>{value}</strong> was removed.`, use
 ```
 import SafeHTMLMessage from '@folio/react-intl-safe-html';
 ...
@@ -70,9 +70,9 @@ const message = <SafeHTMLMessage id="the.message.id" values= value: "Frostbite F
 
 For date and time values formatted as `React.Node` elements, use
 ```
-import  FormattedDate  from 'react-intl';
+import { FormattedDate } from 'react-intl';
 ...
-const message = <FormattedDate value=item.metadata.updatedDate />
+const message = <FormattedDate value={item.metadata.updatedDate} />
 ```
 or, if you need an actual string, consume `<IntlConsumer>` as above, then: `intl.formatDate(loan.dueDate)` and/or `intl.formatTime(loan.dueDate)`.
 
@@ -81,24 +81,24 @@ or, if you need an actual string, consume `<IntlConsumer>` as above, then: `intl
 
 Keys in libraries have the name of the library automatically prefixed, e.g. a key named `search` in `stripes-components/translations/stripes-components/en.json` would be accessible as `stripes-components.search`. Keys in apps have the name of the app automatically prefixed, e.g. a key named `search` in `ui-users/translations/ui-users/en.json` would be accessible as `ui-users.search`.
 
-`react-intl` uses [ICU Message Syntax](https://formatjs.io/docs/icu-syntax) to handle variable substitution in the values. In its simplest form, the argument is assumed to be a string and the placeholder in the value is replaced with the argument, e.g. given ` name: "Natasha" `, the value
+`react-intl` uses [ICU Message Syntax](https://formatjs.io/docs/icu-syntax) to handle variable substitution in the values. In its simplest form, the argument is assumed to be a string and the placeholder in the value is replaced with the argument, e.g. given `{ name: "Natasha" }`, the value
 
 ```
-"Please, name. This is kiddie show."
+"Please, {name}. This is kiddie show."
 ```
 would be returned as
 ```
 Please, Natasha. This is kiddie show.
 ```
-Formatted values are given as `key, type [, format]`, e.g.
+Formatted values are given as `{key, type [, format]}`, e.g.
 ```
-"count, number count, plural, one Record found other Records found",
+"{count, number} {count, plural, one {Record found} other {Records found",
 ```
-Here, the same argument `count` is formatted in two different ways; once as the type "number" and once as the type "plural". A ["number"](https://formatjs.io/docs/icu-syntax#number-type) without a formatter is handled the same way as a string; the value is simply replaced by the argument. A ["plural"](https://formatjs.io/docs/icu-syntax#plural-format) works similar to a switch statement operating on the argument, which is interpreted as a number whose values are matched against the keys in the third argument. For example, `formatMessage( id: 'ui-users.resultCount' ,  count: 1 )` would return "1 Record found" whereas `formatMessage( id: 'ui-users.resultCount' ,  count: 99 )` would return "99 Records found".
+Here, the same argument `count` is formatted in two different ways; once as the type "number" and once as the type "plural". A ["number"](https://formatjs.io/docs/icu-syntax#number-type) without a formatter is handled the same way as a string; the value is simply replaced by the argument. A ["plural"](https://formatjs.io/docs/icu-syntax#plural-format) works similar to a switch statement operating on the argument, which is interpreted as a number whose values are matched against the keys in the third argument. For example, `formatMessage({ id: 'ui-users.resultCount' }, { count: 1 })` would return "1 Record found" whereas `formatMessage({ id: 'ui-users.resultCount' }, { count: 99 })` would return "99 Records found".
 
 ### Dates and times
 
-For date and time values, use `import  FormattedDate  from 'react-intl'; ... const message = <FormattedDate value=item.metadata.updatedDate />` or `react-intl`'s methods': `this.props.intl.formatDate(loan.dueDate)` and/or `this.props.intl.formatTime(loan.dueDate)`.
+For date and time values, use `import { FormattedDate } from 'react-intl'; ... const message = <FormattedDate value={item.metadata.updatedDate} />` or `react-intl`'s methods': `this.props.intl.formatDate(loan.dueDate)` and/or `this.props.intl.formatTime(loan.dueDate)`.
 
 When comparing or manipulating dates, it is safest to operate in UTC
 mode and leave display formatting to internationalization helpers. If
@@ -116,12 +116,12 @@ when given to moment and formatted to UTC for display will appear as
 
 ```
 <FormattedMessage id="module.message.id">
-   label => (
+  { label => (
    <TextField
-     label=label
+     label={label}
      ...
    />
-  )
+  )}
 </FormattedMessage>
 ```
 
@@ -130,19 +130,19 @@ when given to moment and formatted to UTC for display will appear as
 For cases where multiple translated strings are necessary, `stripes-core` provides an `<IntlConsumer>` component for accessing methods found on the `intl` object from `react-intl`. This gives module developers an additional declarative way to add translations to their JSX. It allows access to the `intl.formatMessage` method without having to wrap their component in an HOC.
 
 ```
-import  IntlConsumer  from '@folio/stripes/core';
+import { IntlConsumer } from '@folio/stripes/core';
 
 //... later in JSX
 <IntlConsumer>
-   intl => (
+  { intl => (
     <SearchAndSort
       columnMapping=
-        name: intl.formatMessage( id: 'module.mappedName' ),
-        status: intl.formatMessage( id: 'module.mappedStatus' ),
+        name: intl.formatMessage({ id: 'module.mappedName' }),
+        status: intl.formatMessage({ id: 'module.mappedStatus' }),
         ...
       
     />
-  )
+  )}
 </IntlConsumer>
 ```
 
@@ -151,18 +151,18 @@ import  IntlConsumer  from '@folio/stripes/core';
 The `<IntlProvider>` is at the root level of the `stripes-core` UI, so all child components can use `react-intl`'s components, `injectIntl`, or `useIntl`.
 
 ```
-import  injectIntl  from 'react-intl';
+import { injectIntl } from 'react-intl';
 
-class MyComponent extends React.Component 
-   render() 
-      const msg = this.props.intl.formatMessage( id: 'hello.world' );
-      return (<div>msg</div>);
-   
+class MyComponent extends React.Component {
+   render() {
+      const msg = this.props.intl.formatMessage({ id: 'hello.world' });
+      return (<div>{msg}</div>);
+   }
+}
 
-
-MyComponent.propTypes = 
+MyComponent.propTypes = {
   intl: PropTypes.object.isRequired
-;
+};
 
 export default injectIntl(MyComponent);
 ```
@@ -199,7 +199,7 @@ Plenty of other languages run into similar issues. So use complete sentences as 
 However, you may generate the translation keys to save space in the .js file:
 
 ```
-<FormattedMessage id=`ui-feeds.urlstatus.$status` />
+<FormattedMessage id={`ui-feeds.urlstatus.${status}`} />
 ```
 
 Note that the above will make it difficult to do project-wide searches for translation keys, so be aware of that for your maintenance costs. Additionally, try not to use this pattern if you are consuming translation keys from Stripes (e.g., `stripes-core.button.new`) because it will make Stripes development difficult when trying to discover what translations are and aren't being used.
@@ -209,7 +209,7 @@ Note that the above will make it difficult to do project-wide searches for trans
 Don't concatenate dynamic content and a translated string. Wrong:
 
 ```
-$id <FormattedMessage id="ui-feeds.idWasFound" />
+${id} <FormattedMessage id="ui-feeds.idWasFound" />
 ```
 
 ```
@@ -223,13 +223,13 @@ Instead embed placeholders into the string using the ICU syntax explained above.
 ```
 
 ```
-"idWasFound": "value was found"
+"idWasFound": "{value} was found"
 ```
 
 A possible German translation is
 
 ```
-"idWasFound": "Es wurde value gefunden"
+"idWasFound": "Es wurde {value} gefunden"
 ```
 
 ## Avoid substituting nouns and verbs for placeholders
@@ -239,8 +239,8 @@ In the above section, placeholders were used for identifiers. They can also safe
 **DO NOT** use placeholders like these:
 
 ```
-"typeWasFound": "type was found",
-"deleteType": "Delete type",
+"typeWasFound": "{type} was found",
+"deleteType": "Delete {type}",
 "instance": "Instance",
 "holding": "Holding",
 "item": "Item",
@@ -262,11 +262,11 @@ A better option would be:
 and this lookup in your code:
 
 ```
-<FormattedMessage id=`ui-feeds.wasFound.$type` />
+<FormattedMessage id={`ui-feeds.wasFound.${type}`} />
 ```
 
 ```
-<FormattedMessage id=`ui-feeds.delete.$type` />
+<FormattedMessage id={`ui-feeds.delete.${type}`} />
 ```
 
 If there are both pre-defined and custom types handle them separately:
@@ -275,7 +275,7 @@ If there are both pre-defined and custom types handle them separately:
 "wasFound.instance": "Instance was found",
 "wasFound.holding": "Holding was found",
 "wasFound.item": "Item was found",
-"wasFound.customType": "type was found",
+"wasFound.customType": "{type} was found",
 ```
 
 A possible German translation, note the changing article Der and Den before Bestand:
@@ -284,9 +284,9 @@ A possible German translation, note the changing article Der and Den before Best
 "wasFound.instance": "Die Instance wurde gefunden",
 "wasFound.holding": "Der Bestand wurde gefunden",
 "wasFound.item": "Das Exemplar wurde gefunden",
-"wasFound.customType": "type wurde gefunden",
+"wasFound.customType": "{type} wurde gefunden",
 "delete.instance": "Die Instance löschen",
 "delete.holding": "Den Bestand löschen",
 "delete.item": "Das Exemplar löschen",
-"delete.customType": "type löschen",
+"delete.customType": "{type} löschen",
 ```
